--- a/TestFormulaireCampusFrance/CampusFrance.test.csproj
+++ b/TestFormulaireCampusFrance/CampusFrance.test.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="Selenium.Support" Version="4.35.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.35.0" />
+    <PackageReference Include="JunitXml.TestLogger" Version="3.*" />
   </ItemGroup>
 
   <ItemGroup>
